--- a/index.html
+++ b/index.html
@@ -4,59 +4,101 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="csslogin.css">
 
 </head>
 <body>
-<img src="source-code-c-quan-ly-quan-cafe-162245.jpg" height="333" width="500"/>
-<div id="container">
-    <div id="headerB"></div>
-    <div id="bodyB">
-        <div id="bodyBleft">
-            <button class="btn-table">Bàn 1</button>
-            <button class="btn-table">Bàn 2</button>
-            <button class="btn-table">Bàn 3</button>
-            <button class="btn-table">Bàn 1</button>
-            <button class="btn-table">Bàn 2</button>
-            <button class="btn-table">Bàn 3</button>
-            <button class="btn-table">Bàn 1</button>
-            <button class="btn-table">Bàn 2</button>
-            <button class="btn-table">Bàn 3</button>
-
+<div id="bodystyle">
+    <h2>Quản Lý Quán Ăn Nhanh</h2>
+    <div  id="container">
+        <div id="headerB">
+            <div>
+                <label>
+                    <button id="nameUser">????</button>
+                </label>
+                <label>
+                    <button id="managerSystem">Hệ thống quản lý</button>
+                </label>
+                <label>
+                    <button id="checkLogin" onclick="checkLogin()">Đăng Nhập</button>
+                </label>
+            </div>
         </div>
-        <div id="bodyBright">
-            <div id="headerbody">
-                <div id="left">
-                    <div id="left_menu">
-                        <div>
-                            <select name="caregory" id="caregory">
-                                <option value="">Loại thức ăn</option>
-                            </select>
-                        </div>
-                        <div>
-                            <select name="product" id="product">
-                                <option value="">Thức ăn</option>
-                                <option value="">Gà rán</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div id="right_menu">
-                        <button>Thêm món</button>
-                    </div>
+        <div id="login" class="login">
+            <div class="style_login">
+                <div class="input-login">
+                    <label for="user">User</label>
+                    <br>
+                    <input type="text" id="user" placeholder="Mã nhân viên">
                 </div>
-                <div id="right">
-                    <input type="number" value="0">
+                <div class="input-login">
+                    <label for="password">Password</label>
+                    <br>
+                    <input type="text" id="password" placeholder="mật khẩu">
+                </div>
+                <div class="btn-login">
+                    <button onclick="checkLogin()">Đăng nhập</button>
                 </div>
             </div>
-            <div id="mainbody">
-                <table>
-                    <tr>
-                        <th></th>
-                    </tr>
-                </table>
+        </div>
+        <div style="display: none" id="bodyB">
+            <div id="bodyBleft">
+                <button class="btn-table">Bàn <span>1</span></button>
+            </div>
+            <div id="bodyBright">
+                <div id="headerbody">
+                    <div id="left">
+                        <div id="left_menu">
+                            <div>
+                                <select name="caregory" id="category" onclick='showProductToCategory(this.value)'>
+
+                                </select>
+                            </div>
+                            <div>
+                                <select name="product" id="product">
+
+                                </select>
+                            </div>
+                        </div>
+                        <div id="right_menu">
+                            <button id="addOrderDetail" value="0" onclick="addOrderDetail(this.value)">Thêm món</button>
+                        </div>
+                    </div>
+                    <div id="right">
+                        <input id="quantity" type="number" value="1" style="float: left">
+                    </div>
+                </div>
+                <div id="mainbody">
+                    <table>
+                        <tr>
+                            <th colspan="4">Tên món</th>
+                            <th colspan="2">Số lượng</th>
+                            <th colspan="2">Đơn Giá</th>
+                            <th colspan="3">Thành tiền</th>
+                        </tr>
+                        <tbody id="bodymainbody">
+
+                        </tbody>
+                    </table>
+                </div>
+                <div id="footerbody">
+                    <label for="totalMoney">Tổng tiền : </label>
+                    <input type="text" id="totalMoney" readonly>
+                    <button id="paymentOrder" onclick="paymentOrder(this.value)">Thanh Toán</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
 </body>
-<script src="js.js"></script>
+
+<script src="js/product.js"></script>
+<script src="js/table.js"></script>
+<script src="js/category.js"></script>
+<script src="js/user.js"></script>
+<script src="js/orderDetail.js"></script>
+<script src="js/order.js"></script>
+<script src="js/js.js"></script>
+<script src="js/login.js"></script>
+
 </html>
